--- a/mediavault-spring/pom.xml
+++ b/mediavault-spring/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
