--- a/mediavault-vue/package.json
+++ b/mediavault-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "mediavault",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,16 +7,26 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/vue": "^1.0.31",
+    "@vue/reactivity": "^3.5.12",
+    "@vue/runtime-core": "^3.5.12",
+    "@vue/runtime-dom": "^3.5.12",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.2.0",
     "demo": "file:",
     "element-plus": "^2.2.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-service": "~5.0.0",
+    "typescript": "^5.6.3",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4"
   }
 }
