--- a/mediavault-spring/src/main/resources/application.yml
+++ b/mediavault-spring/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# ????????????????API
 server:
   port: 5000
 
@@ -7,10 +6,10 @@ spring:
     name: mediavault
 
   datasource:
-#    url: jdbc:mysql://103.207.68.161:3310/mediavault?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
-#    username: root
-#    password: sdQPzCLPc2
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+    #    url: jdbc:mysql://103.207.68.161:3310/mediavault?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
+    #    username: root
+    #    password: sdQPzCLPc2
+    #    driver-class-name: com.mysql.cj.jdbc.Driver
 
     url: jdbc:mysql://172.10.10.2:3306/mediavault?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
     username: root
@@ -41,3 +40,7 @@ aliyun:
     access-key-secret: ${ALI_OSS_ACCESS_KEY_SECRET}
     bucket-name: ${ALI_OSS_BUCKET_NAME}
 debug: true
+
+
+jwt:
+  SECRET: p9hYg99mt3F
